testsuite/tests/tool-toplevel/error_highlighting.compilers.reference
Characters 34-41:
  let x = (1 + 2) +. 3. in ();;
          ^^^^^^^
Error: This expression has type int but an expression was expected of type
         float
Characters 9-18:
  let x = (1 + 2 in ();;
          ^      ^^
Syntax error: ')' expected, the highlighted '(' might be unmatched
Characters 9-17:
  let x = (1 + 2;;
          ^     ^^
Syntax error: ')' expected, the highlighted '(' might be unmatched
Characters 22-23:
  let y = 1 +. 2. in
          ^
Error: This expression has type int but an expression was expected of type
         float
Characters 9-20:
  ........(.
  ...
  ..in
Syntax error: ')' expected, the highlighted '(' might be unmatched
Characters 9-18:
  ........(1
    +
  2)...
Error: This expression has type int but an expression was expected of type
         float

