testsuite/tests/tool-toplevel/error_highlighting.ml
(* TEST
   * toplevel
*)

let x = (1 + 2) +. 3. in ();;

let x = (1 + 2 in ();;

let x = (1 + 2;;

let x = 1 in
let y = 1 +. 2. in
();;

let x = (1
  +
2 in
();;

let x = (1
  +
2) +.
3. in ();;
